"""
ç‹€æ…‹ç®¡ç†å™¨
æ ¹æ“š EGameFlowState ç®¡ç†æ‰€æœ‰ç‹€æ…‹è™•ç†å™¨
æ¯å€‹ç‹€æ…‹éƒ½æœ‰å°æ‡‰çš„ç¨ç«‹è™•ç†å™¨
"""

import time
import random
from typing import Dict, Any, Optional

# TODO: ğŸ”§ ä¾†æº: GameFlowData.proto - éœ€è¦å¾ Proto å®šç¾©å–å¾—éŠæˆ²ç‹€æ…‹æšèˆ‰
# from config.game_config import æ‰€æœ‰é¡åˆ¥
from input.random_input import RandomInputGenerator

# TODO: ğŸ”§ ä¾†æº: GameFlowData.proto - æ ¹æ“š æµç¨‹ æšèˆ‰å€¼ç”Ÿæˆå°æ‡‰çš„ç‹€æ…‹è™•ç†å™¨å°å…¥
# å°å…¥æ‰€æœ‰ç‹€æ…‹è™•ç†å™¨
# ç¯„ä¾‹: from states.copyright_state import CopyrightStateHandler

class StateManager:
    def __init__(self):
        self.current_state = None
        self.previous_state = None
        self.game_data = None
        self.targets = {}
        self.running = False
        
        # éš¨æ©Ÿè¼¸å…¥ç”Ÿæˆå™¨ï¼ˆå‚™ç”¨ï¼‰
        self.random_generator = RandomInputGenerator()
        
        # TODO: ğŸ”§ ä¾†æº: GameFlowData.proto - æ ¹æ“š æµç¨‹ æšèˆ‰å€¼è¨»å†Šå°æ‡‰çš„ç‹€æ…‹è™•ç†å™¨
        # åˆå§‹åŒ–æ‰€æœ‰ç‹€æ…‹è™•ç†å™¨ - å®Œæ•´çš„ GameFlowDataè£¡çš„æµç¨‹
        self.state_handlers = {
            # TODO: ç¯„æœ¬: GameFlowState.GAME_FLOW_COPYRIGHT: CopyrightStateHandler(),
        }
        
        # è¼¸å…¥é–“éš”æ§åˆ¶ - æ¯ç§’ç™¼é€ä¸€æ¬¡éš¨æ©Ÿè¼¸å…¥
        self.input_interval = 1.0  # 1ç§’é–“éš”
        self.last_input_time = 0
        
        # ç‹€æ…‹çµ±è¨ˆ
        self.state_enter_time = {}
        self.state_durations = {}
        
        # éš¨æ©Ÿç›®æ¨™ç”Ÿæˆ
        self.random_targets = {}  # å„²å­˜æ¯å€‹ç‹€æ…‹çš„éš¨æ©Ÿç›®æ¨™
        self.continuous_start_mode = {}  # å„²å­˜æ˜¯å¦é€²å…¥æŒçºŒç™¼é€ START æ¨¡å¼
        self.last_received_index = {}  # å„²å­˜ä¸Šæ¬¡æ¥æ”¶åˆ°çš„å¯¦éš› index
        self.last_index_change_time = {}  # å„²å­˜ä¸Šæ¬¡ index è®ŠåŒ–çš„æ™‚é–“
        self.current_direction = {}  # å„²å­˜ç•¶å‰ç§»å‹•æ–¹å‘ï¼š'right' æˆ– 'left'
        
        print("ğŸ® State manager initialized with EGameFlowState-based handlers")
        print(f"ğŸ“‹ Registered {len(self.state_handlers)} state handlers")
        
    def set_targets(self, targets: Dict[str, Any]):
        """è¨­å®šæ¸¬è©¦ç›®æ¨™"""
        self.targets = targets
        
        # å°‡ç›®æ¨™å‚³éçµ¦æ‰€æœ‰ç‹€æ…‹è™•ç†å™¨
        for state_id, handler in self.state_handlers.items():
            handler.set_targets(targets)
        
        if targets:
            print(f"ğŸ¯ State manager targets set: {targets}")
        else:
            print("ğŸ² State manager using random mode")
    
    def generate_random_target_for_state(self, state: int) -> Optional[int]:
        """ç‚ºæŒ‡å®šç‹€æ…‹ç”Ÿæˆéš¨æ©Ÿç›®æ¨™ç´¢å¼•"""
        if state in SELECTION_OPTIONS:
            selection_info = SELECTION_OPTIONS[state]
            max_index = selection_info['max_index']
            target_index = random.randint(0, max_index)
            
            # ç²å–é¸é …åç¨±
            option_name = selection_info['options'].get(target_index, f"é¸é …{target_index}")
            state_name = selection_info['name']
            
            print(f"ğŸ¯ {state_name} - éš¨æ©Ÿç›®æ¨™: ç´¢å¼• {target_index} ({option_name})")
            
            return target_index
        return None
        
    def update_game_state(self, game_data):
        """æ›´æ–°éŠæˆ²ç‹€æ…‹"""
        self.game_data = game_data
        
        if hasattr(game_data, 'current_flow_state'):
            new_state = game_data.current_flow_state
            
            # æª¢æŸ¥ç‹€æ…‹è®ŠåŒ–
            if self.current_state != new_state:
                self._handle_state_transition(self.current_state, new_state)
                self.previous_state = self.current_state
                self.current_state = new_state
                
    def _handle_state_transition(self, from_state: Optional[int], to_state: int):
        """è™•ç†ç‹€æ…‹è½‰æ›"""
        current_time = time.time()
        
        # è¨˜éŒ„ç‹€æ…‹æŒçºŒæ™‚é–“
        if from_state is not None and from_state in self.state_enter_time:
            duration = current_time - self.state_enter_time[from_state]
            if from_state not in self.state_durations:
                self.state_durations[from_state] = []
            self.state_durations[from_state].append(duration)
            
        # è¨˜éŒ„æ–°ç‹€æ…‹é€²å…¥æ™‚é–“
        self.state_enter_time[to_state] = current_time
        
        # é¡¯ç¤ºç‹€æ…‹è½‰æ›
        # TODO: ğŸ”§ ç¯„æœ¬ GAME_FLOW_STATE_NAMESè¦æ›¿æ›æˆgame_config.pyä¸­çš„æµç¨‹åç¨±
        from_name = f"State_{from_state}" if from_state is not None else "None"
        to_name = f"State_{to_state}"  # TODO: ğŸ”§ ç¯„æœ¬
        print(f"ğŸ”„ State transition: {from_name} -> {to_name}")
        
        # ç‹€æ…‹åˆ‡æ›æ™‚ç«‹åˆ»åœæ­¢æŒçºŒç™¼é€ START æ¨¡å¼
        if from_state is not None and from_state in self.continuous_start_mode:
            print(f"â¹ï¸  ç‹€æ…‹åˆ‡æ›ï¼Œåœæ­¢æŒçºŒç™¼é€ START æ¨¡å¼")
            del self.continuous_start_mode[from_state]
        
        # ğŸ¯ çµ±ä¸€è™•ç†ï¼šé€²å…¥é¸æ“‡ç‹€æ…‹æ™‚ç”Ÿæˆéš¨æ©Ÿç›®æ¨™
        if to_state in SELECTION_OPTIONS:
            target_index = self.generate_random_target_for_state(to_state)
            if target_index is not None:
                self.random_targets[to_state] = target_index
                # é‡ç½®ç‹€æ…‹è¿½è¹¤
                self.last_received_index[to_state] = None
                self.last_index_change_time[to_state] = time.time()
                self.current_direction[to_state] = 'right'  # é è¨­å…ˆå¾€å³
                # ç¢ºä¿ä¸åœ¨æŒçºŒ START æ¨¡å¼
                if to_state in self.continuous_start_mode:
                    del self.continuous_start_mode[to_state]
                
                # ğŸ¯ é€šçŸ¥ç‹€æ…‹è™•ç†å™¨è¨­å®šç›®æ¨™
                if to_state in self.state_handlers:
                    handler = self.state_handlers[to_state]
                    if hasattr(handler, 'set_random_target'):
                        handler.set_random_target(target_index)
                        print(f"ğŸ¯ çµ±ä¸€è¨­å®šéš¨æ©Ÿç›®æ¨™: {target_index} (ç‹€æ…‹: {to_name})")
        
        # é‡ç½®é›¢é–‹ç‹€æ…‹çš„è™•ç†å™¨
        if from_state is not None and from_state in self.state_handlers:
            self.state_handlers[from_state].reset_state()
            print(f"ğŸ”„ é‡ç½®ç‹€æ…‹è™•ç†å™¨: {from_name}")
        
    def generate_input(self) -> Optional[bytes]:
        """ç”Ÿæˆè¼¸å…¥æŒ‡ä»¤ - æ¯æ¬¡æ”¶åˆ° protobuf å°±ç™¼é€ä¸€æ¬¡"""
        # ç§»é™¤æ™‚é–“é–“éš”æ§åˆ¶ï¼Œæ¯æ¬¡æ”¶åˆ°æ¶ˆæ¯éƒ½è™•ç†
        
        # ç›´æ¥ä½¿ç”¨ç‹€æ…‹è™•ç†å™¨è™•ç†ç•¶å‰ç‹€æ…‹ï¼ˆä¸å†ä½¿ç”¨ StateManager çš„éš¨æ©Ÿç›®æ¨™é‚è¼¯ï¼‰
        input_result = self._handle_with_state_handlers()
        
        if input_result is not None:
            return input_result
        else:
            # å¦‚æœæ²’æœ‰ç‹€æ…‹è™•ç†å™¨èƒ½è™•ç†ï¼Œä½¿ç”¨éš¨æ©Ÿè¼¸å…¥
            # TODO: ğŸ”§ GAME_FLOW_STATE_NAMESè¦æ›¿æ›æˆgame_config.pyä¸­çš„æµç¨‹åç¨±
            # TODO: state_name = GAME_FLOW_STATE_NAMES.get(self.current_state, f"State_{self.current_state}")
            # GAME_FLOW_STATE_NAMESè¦æ›¿æ›æˆgame_config.pyä¸­çš„æµç¨‹åç¨±
            print(f"ğŸ² No handler found for state {state_name}, using random input")
            return self.random_generator.generate_basic_input()
    
    def _handle_random_target_selection(self) -> Optional[bytes]:
        """è™•ç†éš¨æ©Ÿç›®æ¨™å°å‘é¸æ“‡ - åŸºæ–¼å¯¦éš› index è®ŠåŒ–åˆ¤æ–·"""
        if self.current_state is None or self.current_state not in self.random_targets:
            return None
        
        # æª¢æŸ¥æ˜¯å¦å·²ç¶“é€²å…¥æŒçºŒç™¼é€ START æ¨¡å¼
        if self.current_state in self.continuous_start_mode:
            print(f"ğŸ”„ æ¯æ¬¡ protobuf ç™¼é€ START...")
            return self.random_generator.generate_start_input()
            
        target_index = self.random_targets[self.current_state]
        
        # å¾éŠæˆ²æ•¸æ“šä¸­ç²å–ç•¶å‰å¯¦éš›çš„ index
        current_actual_index = self._get_current_index_from_game_data()
        if current_actual_index is None:
            print(f"âš ï¸  ç„¡æ³•å¾éŠæˆ²æ•¸æ“šç²å–ç•¶å‰ indexï¼Œè·³éæœ¬æ¬¡è™•ç†")
            return None
        
        # TODO: ğŸ”§ GAME_FLOW_STATE_NAMESè¦æ›¿æ›æˆgame_config.pyä¸­çš„æµç¨‹åç¨±
        # TODO: ç¯„æœ¬ : print(f"ğŸ® ç•¶å‰ç‹€æ…‹: {GAME_FLOW_STATE_NAMES.get(self.current_state, 'Unknown')}")
        # GAME_FLOW_STATE_NAMESè¦æ›¿æ›æˆgame_config.pyä¸­çš„æµç¨‹åç¨±
        print(f"ğŸ“Š ç•¶å‰å¯¦éš› index: {current_actual_index}, ç›®æ¨™ index: {target_index}")
        
        # æª¢æŸ¥æ˜¯å¦é”åˆ°ç›®æ¨™ - ä¸€é¸åˆ°ç›®æ¨™å°±ç«‹åˆ»åœæ­¢å·¦å³ç§»å‹•
        if target_index == current_actual_index:
            print(f"âœ… Index åŒ¹é…ï¼ç•¶å‰ index {current_actual_index} == ç›®æ¨™ index {target_index}")
            print(f"â¹ï¸  ç«‹åˆ»åœæ­¢ç™¼é€å·¦å³éµ")
            print(f"ğŸ¯ é€²å…¥æŒçºŒç™¼é€ START æ¨¡å¼ï¼Œç›´åˆ°ç‹€æ…‹åˆ‡æ›...")
            
            # é€²å…¥æŒçºŒç™¼é€ START æ¨¡å¼
            self.continuous_start_mode[self.current_state] = True
            
            # æ¸…é™¤æ­¤ç‹€æ…‹çš„ç›®æ¨™ï¼Œé¿å…é‡è¤‡åˆ¤æ–·
            if self.current_state in self.random_targets:
                del self.random_targets[self.current_state]
                print(f"ğŸ—‘ï¸  å·²æ¸…é™¤ç‹€æ…‹ {self.current_state} çš„ç›®æ¨™")
            
            # ç«‹å³ç™¼é€ç¬¬ä¸€å€‹ START
            return self.random_generator.generate_start_input()
        
        # é‚„æ²’é¸åˆ°ç›®æ¨™ï¼Œç¹¼çºŒç§»å‹•
        return self._handle_direction_based_movement(current_actual_index, target_index)
    
    def _handle_direction_based_movement(self, current_index: int, target_index: int) -> Optional[bytes]:
        """åŸºæ–¼å¯¦éš› index è®ŠåŒ–çš„ç§»å‹•é‚è¼¯ - æ¯æ¬¡æ”¶åˆ° protobuf éƒ½ç™¼é€æŒ‰éµ"""
        state = self.current_state
        current_time = time.time()
        
        # æª¢æŸ¥ä¸Šæ¬¡çš„ index æ˜¯å¦æœ‰è®ŠåŒ–
        last_index = self.last_received_index.get(state)
        if last_index is not None and last_index != current_index:
            print(f"ğŸ“ˆ Index æœ‰è®ŠåŒ–: {last_index} -> {current_index}")
            # Index æœ‰è®ŠåŒ–ï¼Œæ›´æ–°è®ŠåŒ–æ™‚é–“
            self.last_index_change_time[state] = current_time
        elif last_index is not None and last_index == current_index:
            # Index æ²’è®ŠåŒ–ï¼Œæª¢æŸ¥æ˜¯å¦è¶…é1ç§’
            time_since_change = current_time - self.last_index_change_time.get(state, current_time)
            if time_since_change > 1.0:
                print(f"ğŸ“‰ Index è¶…é1ç§’æ²’è®ŠåŒ–: {current_index}ï¼Œåˆ¤æ–·å·²åˆ°åº•ï¼Œåˆ‡æ›æ–¹å‘")
                # åˆ‡æ›æ–¹å‘
                current_direction = self.current_direction.get(state, 'right')
                if current_direction == 'right':
                    print(f"ğŸ”„ å¾å¾€å³åˆ‡æ›ç‚ºå¾€å·¦")
                    self.current_direction[state] = 'left'
                else:
                    print(f"ğŸ”„ å¾å¾€å·¦åˆ‡æ›ç‚ºå¾€å³")
                    self.current_direction[state] = 'right'
                # é‡ç½®è®ŠåŒ–æ™‚é–“
                self.last_index_change_time[state] = current_time
            else:
                print(f"â³ Index æ²’è®ŠåŒ–ä½†æœªè¶…é1ç§’ ({time_since_change:.1f}s)ï¼Œç¹¼çºŒç•¶å‰æ–¹å‘")
        
        # æ›´æ–°ä¸Šæ¬¡æ¥æ”¶çš„ index
        self.last_received_index[state] = current_index
        
        # æ¯æ¬¡æ”¶åˆ° protobuf éƒ½ç™¼é€æŒ‰éµï¼ˆæ ¹æ“šç•¶å‰æ–¹å‘ï¼‰
        direction = self.current_direction.get(state, 'right')
        
        # TODO: æ ¹æ“šInputCommandè¨­å®šæŒ‰éµé‚è¼¯
#       ç¯„ä¾‹: if direction == 'right':
#            print(f"â¡ï¸  æ¯æ¬¡ protobuf ç™¼é€å¾€å³ (ç•¶å‰ index: {current_index})")
#            return self.random_generator.generate_key_input([InputKeyType.INPUT_KEY_RIGHT], True)
#        else:
#            print(f"â¬…ï¸  æ¯æ¬¡ protobuf ç™¼é€å¾€å·¦ (ç•¶å‰ index: {current_index})")
#            return self.random_generator.generate_key_input([InputKeyType.INPUT_KEY_LEFT], True)
    
    def _get_current_index_from_game_data(self) -> Optional[int]:
        """å¾éŠæˆ²æ•¸æ“šä¸­ç²å–ç•¶å‰é¸æ“‡çš„å¯¦éš› index"""
        if not self.game_data:
            print(f"âš ï¸  éŠæˆ²æ•¸æ“šç‚ºç©º")
            return None
            
        try:
            pass
            #TODO: æ ¹æ“š.amazonq\rules\AutoTest_Game_Setting.md çš„"2. éœ€è¦æ“ä½œçš„æµç¨‹"æœ‰æµç¨‹å’Œé¸é …enumçš„é‚è¼¯èªªæ˜
#            if self.current_state == GameFlowState.GAME_FLOW_SELECT_BIKE:
#                # è»Šè¼›é¸æ“‡ï¼šæª¢æŸ¥ selected_vehicle æ¬„ä½
#                if hasattr(self.game_data, 'selected_vehicle'):
#                    current_index = self.game_data.selected_vehicle
#                    print(f"ğŸš— å¾éŠæˆ²æ•¸æ“šç²å–è»Šè¼› index: {current_index}")
#                    return current_index
#                else:
#                    print(f"âš ï¸  éŠæˆ²æ•¸æ“šä¸­æ²’æœ‰ selected_vehicle æ¬„ä½")
                    
        except Exception as e:
            print(f"âŒ ç²å–éŠæˆ²æ•¸æ“š index æ™‚ç™¼ç”ŸéŒ¯èª¤: {e}")
            
        return None
    
    def _handle_fallback_selection(self, target_index: int) -> Optional[bytes]:
        """ç•¶ç„¡æ³•ç²å–éŠæˆ²æ•¸æ“šæ™‚çš„å‚™ç”¨é¸æ“‡é‚è¼¯ - ç°¡åŒ–ç‰ˆæœ¬"""
        print(f"âš ï¸  å‚™ç”¨é‚è¼¯ï¼šç„¡æ³•ç²å–éŠæˆ²æ•¸æ“šï¼Œæš«åœè™•ç†")
        return None  # æ²’æœ‰éŠæˆ²æ•¸æ“šå°±ä¸è™•ç†ï¼Œç­‰ä¸‹æ¬¡å¾ªç’°
            
    def _handle_with_state_handlers(self) -> Optional[bytes]:
        """ä½¿ç”¨ç‹€æ…‹è™•ç†å™¨è™•ç†ç•¶å‰ç‹€æ…‹"""
        if self.current_state is None:
            return None
            
        # æª¢æŸ¥æ˜¯å¦æœ‰å°æ‡‰çš„ç‹€æ…‹è™•ç†å™¨
        if self.current_state in self.state_handlers:
            handler = self.state_handlers[self.current_state]
            # TODO: ğŸ”§ GAME_FLOW_STATE_NAMESè¦æ›¿æ›æˆgame_config.pyä¸­çš„æµç¨‹åç¨±
            # TODO:state_name = GAME_FLOW_STATE_NAMES.get(self.current_state, f"State_{self.current_state}")
            print(f"ğŸ¯ Using dedicated handler for state {state_name}")
            return handler.handle_state(self.current_state, self.game_data)
                
        return None
        
    def start(self):
        """å•Ÿå‹•ç‹€æ…‹ç®¡ç†"""
        self.running = True
        print("ğŸš€ State manager started")
        
    def stop(self):
        """åœæ­¢ç‹€æ…‹ç®¡ç†"""
        self.running = False
        self._print_state_statistics()
        
        # é‡ç½®æ‰€æœ‰ç‹€æ…‹è™•ç†å™¨
        for handler in self.state_handlers.values():
            handler.reset_state()
            
        print("â¹ï¸  State manager stopped")
        
    def _print_state_statistics(self):
        """æ‰“å°ç‹€æ…‹çµ±è¨ˆ"""
        if not self.state_durations:
            return
            
        print(f"\nğŸ“Š === State Duration Statistics ===")
        for state, durations in self.state_durations.items():
            # TODO: state_name = GAME_FLOW_STATE_NAMES.get(state, f"State_{state}")
            # TODO: ğŸ”§ GAME_FLOW_STATE_NAMESè¦æ›¿æ›æˆgame_config.pyä¸­çš„æµç¨‹åç¨±
            avg_duration = sum(durations) / len(durations)
            total_duration = sum(durations)
            print(f"  {state_name}: {len(durations)} times, avg {avg_duration:.2f}s, total {total_duration:.2f}s")
            
    def get_current_state_name(self) -> str:
        """ç²å–ç•¶å‰ç‹€æ…‹åç¨±"""
        if self.current_state is None:
            return "Unknown"
        # TODO: return GAME_FLOW_STATE_NAMES.get(self.current_state, f"State_{self.current_state}")
            # TODO: ğŸ”§ GAME_FLOW_STATE_NAMESè¦æ›¿æ›æˆgame_config.pyä¸­çš„æµç¨‹åç¨±
        
    def has_targets(self) -> bool:
        """æª¢æŸ¥æ˜¯å¦æœ‰è¨­å®šç›®æ¨™"""
        return bool(self.targets)
        
    def get_state_handler(self, state: int):
        """ç²å–æŒ‡å®šç‹€æ…‹çš„è™•ç†å™¨"""
        return self.state_handlers.get(state)
        
    def get_all_state_handlers(self) -> Dict[int, Any]:
        """ç²å–æ‰€æœ‰ç‹€æ…‹è™•ç†å™¨"""
        return self.state_handlers.copy()
        
    def get_current_state_handler(self):
        """ç²å–ç•¶å‰ç‹€æ…‹å°æ‡‰çš„è™•ç†å™¨"""
        if self.current_state is None:
            return None
        return self.state_handlers.get(self.current_state)
        
    def get_state_progress_summary(self) -> Dict[str, Any]:
        """ç²å–æ‰€æœ‰ç‹€æ…‹çš„é€²åº¦æ‘˜è¦"""
        progress_summary = {}
        
        for state_id, handler in self.state_handlers.items():
            if hasattr(handler, 'get_state_progress'):
                # TODO: state_name = GAME_FLOW_STATE_NAMES.get(state_id, f"State_{state_id}")
            # TODO: ğŸ”§ GAME_FLOW_STATE_NAMESè¦æ›¿æ›æˆgame_config.pyä¸­çš„æµç¨‹åç¨±
                progress_summary[state_name] = handler.get_state_progress()
                
        return progress_summary
        
    def register_state_handler(self, state: int, handler):
        """è¨»å†Šæ–°çš„ç‹€æ…‹è™•ç†å™¨"""
        self.state_handlers[state] = handler
        handler.set_targets(self.targets)  # è¨­å®šç•¶å‰ç›®æ¨™
        # TODO: state_name = GAME_FLOW_STATE_NAMES.get(state, f"State_{state}")
            # TODO: ğŸ”§ GAME_FLOW_STATE_NAMESè¦æ›¿æ›æˆgame_config.pyä¸­çš„æµç¨‹åç¨±
        print(f"ğŸ“ Registered handler for state {state_name}")
        
    def unregister_state_handler(self, state: int):
        """å–æ¶ˆè¨»å†Šç‹€æ…‹è™•ç†å™¨"""
        if state in self.state_handlers:
            del self.state_handlers[state]
            # TODO: state_name = GAME_FLOW_STATE_NAMES.get(state, f"State_{state}")
            # TODO: ğŸ”§ GAME_FLOW_STATE_NAMESè¦æ›¿æ›æˆgame_config.pyä¸­çš„æµç¨‹åç¨±
            print(f"ğŸ—‘ï¸  Unregistered handler for state {state_name}")
            
    def get_registered_states(self) -> list:
        """ç²å–å·²è¨»å†Šçš„ç‹€æ…‹åˆ—è¡¨"""
        return list(self.state_handlers.keys())
        
    def is_state_supported(self, state: int) -> bool:
        """æª¢æŸ¥ç‹€æ…‹æ˜¯å¦æœ‰å°æ‡‰çš„è™•ç†å™¨"""
        return state in self.state_handlers
